Add database + prisma scripts to insert data
Early stage stuff, manually inputting some data to work with.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,12 @@
     "incremental": true,
     "noUncheckedIndexedAccess": true
   },
+  "ts-node": {
+    "compilerOptions": {
+      "module": "CommonJS"
+    }
+  },
+
   "include": [
     "next-env.d.ts",
     "next-auth.d.ts",
