--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
     "@next-auth/prisma-adapter": "^1.0.4",
-    "@prisma/client": "^4.4.0",
-    "@trpc/client": "^9.27.1",
-    "@trpc/next": "^9.27.1",
-    "@trpc/react": "^9.27.1",
-    "@trpc/server": "^9.27.1",
-    "next": "12.2.5",
-    "next-auth": "^4.10.3",
+    "@prisma/client": "^4.5.0",
+    "@tanstack/react-query": "^4.13.0",
+    "@trpc/client": "^10.0.0-proxy-beta.26",
+    "@trpc/next": "^10.0.0-proxy-beta.26",
+    "@trpc/react-query": "^10.0.0-proxy-beta.26",
+    "@trpc/server": "^10.0.0-proxy-beta.26",
+    "next": "12.3.1",
+    "next-auth": "^4.12.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-query": "^3.39.2",
     "superjson": "^1.9.1",
-    "zod": "^3.18.0"
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.2",
@@ -36,13 +36,15 @@
     "@typescript-eslint/parser": "^5.33.0",
     "autoprefixer": "^10.4.8",
     "eslint": "8.22.0",
-    "eslint-config-next": "12.2.5",
+    "eslint-config-next": "12.3.1",
     "postcss": "^8.4.16",
-    "prisma": "^4.4.0",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "prisma": "^4.5.0",
     "tailwindcss": "^3.1.8",
-    "typescript": "4.7.4"
+    "typescript": "4.8.4"
   },
   "ct3aMetadata": {
-    "initVersion": "5.8.1"
+    "initVersion": "6.5.1"
   }
 }
